# legislation-rag

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
scripts/: build_indexes.py  chunk_documents.py  clean_text.py  evaluate_systems.py  extract_text.py  generate_summaries.py  run_baseline_rag.py  run_summary_rag.py  smoke_test_retrieval.py  visualize_embeddings.py
src/legislation_rag/: config.py
src/legislation_rag/ingestion/: __init__.py  cleaner.py  pdf_parser.py
src/legislation_rag/rag/: answer_generator.py  baseline_pipeline.py  summary_pipeline.py
src/legislation_rag/retrieval/: __init__.py  embedder.py  retriever.py  vector_store.py
src/legislation_rag/summarization/: generator.py  prompts.py
tests/: test_preprocessing_smoke.py
